# supremacy

./: .flake8  LICENSE  README.md  pyproject.toml
run/: tournament.py
src/supremacy/: __init__.py  ai.py  base.py  config.py  engine.py  fight.py  game_map.py  graphics.py  helpers.py  player.py  tools.py  vehicles.py
src/supremacy/core/: __init__.py  ai.py  base.py  config.py  engine.py  fight.py  game_map.py  graphics.py  player.py  tools.py  vehicles.py
tests/: simple_ai.py  template_ai.py  test.py  tournament.py
